Agregué vista horizontal mobile

--- a/pages/catas.html
+++ b/pages/catas.html
@@ -71,6 +71,7 @@
         <article>
             <img class="evento__imgEvento wow animate__animated animate__fadeInUp" src="../assets/images/cata-online.jpg" alt="Flyer de evento no disponible">
         </article>
+        <hr>
         <article>
             <!--Carrousel de imágenes-->
             <div id="carrousel__small">
@@ -105,7 +106,6 @@
                     </button>
                 </div>
             </div>
-            <hr>
               <!--Fin Carrousel-->
             <div class="container" id="carrousel__large">
                 <div class="row">
@@ -139,7 +139,7 @@
                     <h4>Datos de contacto</h4>
                     <table>
                         <tr><td>11 1234 5678</td></tr>
-                        <tr><td>violeta_vinos@gmail.com</td></tr>
+                        <tr><td><a class="link__mail" href = "mailto: violetavinos@gmail.com?subject=Consulta%20desde%20la%20web&body=¡Hola! ">violeta_vinos@gmail.com</a></td></tr>
                         <tr><td>Canning, Buenos Aires</td></tr>
                     </table>
                 </div>
