--- a/pages/club.html
+++ b/pages/club.html
@@ -126,7 +126,7 @@
                     <h4>Datos de contacto</h4>
                     <table>
                         <tr><td>11 1234 5678</td></tr>
-                        <tr><td>violeta_vinos@gmail.com</td></tr>
+                        <tr><td><a class="link__mail" href = "mailto: violetavinos@gmail.com?subject=Consulta%20desde%20la%20web&body=¡Hola! ">violeta_vinos@gmail.com</a></td></tr>
                         <tr><td>Canning, Buenos Aires</td></tr>
                     </table>
                 </div>
