--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                                   </div>
                                 </div>
                               </div>
-                            <td><a href = "mailto: violetavinos@gmail.com?subject = Reservar cupo&body = ¡Hola! Quiero reservar un cupo para el evento...">¡Reservá tu lugar!</a></td>
+                            <td><a href = "mailto: violetavinos@gmail.com?subject=Reservar%20cupo&body=¡Hola!%20Quiero%20reservar%20un%20cupo%20para%20el%20evento...">¡Reservá tu lugar!</a></td>
                         </tr>
                         <tr class="eventos__row-2">
                             <td class="eventos__fecha">13 AGO</td>
@@ -131,7 +131,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <td><a href = "mailto: violetavinos@gmail.com?subject = Reservar cupo&body = ¡Hola! Quiero reservar un cupo para el evento...">¡Reservá tu lugar!</a></td>
+                            <td><a href = "mailto: violetavinos@gmail.com?subject=Reservar%20cupo&body=¡Hola!%20Quiero%20reservar%20un%20cupo%20para%20el%20evento...">¡Reservá tu lugar!</a></td>
                         </tr>
                     </table>
                     <table id="eventos__small">
@@ -156,7 +156,7 @@
                         <h4>Datos de contacto</h4>
                         <table>
                             <tr><td>11 1234 5678</td></tr>
-                            <tr><td>violeta_vinos@gmail.com</td></tr>
+                            <tr><td><a class="link__mail" href = "mailto: violetavinos@gmail.com?subject=Consulta%20desde%20la%20web&body=¡Hola! ">violeta_vinos@gmail.com</a></td></tr>
                             <tr><td>Canning, Buenos Aires</td></tr>
                         </table>
                     </div>
