update tienda y destacados

--- a/index.html
+++ b/index.html
@@ -64,26 +64,30 @@
         <section>
             <img class="body__img-portada" src="assets/images/imagen-portada.jpeg" alt="Imagen de portada">
             <article>
-                <h3>¡Destacados de la semana!</h3>
+                <h3>¡Destacados del mes!</h3>
                 <!--los productos se muestran en fila--> 
                 <div id="productosDestacados">
                     <table>
-                        <tr>
-                            <td>
-                                <img class="productosDestacados__image" src="assets/images/productos/producto1.png" alt="Luigi Bosca Cabernet Sauvignon">
-                            </td>
-                            <td>
-                                <img class="productosDestacados__image" src="assets/images/productos/producto2.png" alt="Jorge Rubio Gran Reserva Malbec">
-                            </td>
-                            <td>
-                                <img class="productosDestacados__image" src="assets/images/productos/producto3.png" alt="Jorge Rubio Privado Reserva Malbec">
-                            </td>
-                        </tr>
                         <tr>
                             <td class="productosDestacados__nombre">Luigi Bosca Cabernet Sauvignon</td>
                             <td class="productosDestacados__nombre">Jorge Rubio Gran Reserva Malbec</td>
                             <td class="productosDestacados__nombre">Jorge Rubio Privado Reserva Malbec</td>
                         </tr>
+                        <tr>
+                            <td>
+                                <img class="productosDestacados__image" src="assets/images/productos/producto1.png" alt="Luigi Bosca Cabernet Sauvignon">
+                                <img class="productosDestacados__stars" src="assets/images/productos/4stars.png" alt="Puntuación no disponible">
+                            </td>
+                            <td>
+                                <img class="productosDestacados__image" src="assets/images/productos/producto2.png" alt="Jorge Rubio Gran Reserva Malbec">
+                                <img class="productosDestacados__stars" src="assets/images/productos/5stars.png" alt="Puntuación no disponible">
+                            </td>
+                            <td>
+                                <img class="productosDestacados__image" src="assets/images/productos/producto3.png" alt="Jorge Rubio Privado Reserva Malbec">
+                                <img class="productosDestacados__stars" src="assets/images/productos/5stars.png" alt="Puntuación no disponible">
+                            </td>
+                        </tr>
+                        
                     </table>
                 </div>
             </article>
@@ -94,8 +98,8 @@
                     <table id="eventos">
                         <th colspan="4"><h3>Próximos eventos</h3></th>
                         <tr class="eventos__row-1">
-                            <td class="eventos__fecha">06 AGO</td>
-                            <td class="eventos__descripcion" data-bs-toggle="modal" data-bs-target="#exampleModal">Cata online</td>
+                            <td class="eventos__fecha">27 AGO</td>
+                            <td class="eventos__descripcion" data-bs-toggle="modal" data-bs-target="#exampleModal">Cena y cata</td>
                             <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
                                 <div class="modal-dialog modal-dialog-center">
                                   <div class="modal-content">
@@ -116,7 +120,7 @@
                             <td><a href = "mailto: violetavinos@gmail.com?subject=Reservar%20cupo&body=¡Hola!%20Quiero%20reservar%20un%20cupo%20para%20el%20evento...">¡Reservá tu lugar!</a></td>
                         </tr>
                         <tr class="eventos__row-2">
-                            <td class="eventos__fecha">13 AGO</td>
+                            <td class="eventos__fecha">13 OCT</td>
                             <td class="eventos__descripcion" data-bs-toggle="modal" data-bs-target="#exampleModal">Degustación boutique</td>
                             <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                                 <div class="modal-dialog">
@@ -126,7 +130,7 @@
                                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                         </div>
                                         <div class="modal-body">
-                                            <img class="carrousel__imagen-lg" src="assets/images/degustacion-agosto.jpg" alt="Imagen no disponible">
+                                            <img class="carrousel__imagen-lg" src="assets/images/degustacion-octubre.jpg" alt="Imagen no disponible">
                                         </div>
                                     </div>
                                 </div>
@@ -137,8 +141,8 @@
                     <table id="eventos__small">
                         <th colspan="2"><h3>Próximos eventos</h3></th>
                         <tr class="eventos__row-1">
-                            <td class="eventos__fecha">06 AGO</td>
-                            <td class="eventos__descripcion">Cata en casa</td>
+                            <td class="eventos__fecha">27 AGO</td>
+                            <td class="eventos__descripcion">Cena y cata</td>
                         </tr>
                         <tr class="eventos__row-2">
                             <td class="eventos__fecha">13 AGO</td>
