--- a/pages/catas.html
+++ b/pages/catas.html
@@ -66,10 +66,10 @@
         <img class="section__banner" src="../assets/images/banners/banner-top.jpg" alt="Imagen no disponible">
         <h3>Próximos eventos</h3>
         <article>
-            <img class="evento__imgEvento wow animate__animated animate__fadeInUp" src="../assets/images/degustacion-agosto.jpg" alt="Flyer de evento no disponible">
+            <img class="evento__imgEvento wow animate__animated animate__fadeInLeft" src="../assets/images/cena-y-cata.jpg" alt="Flyer de evento no disponible">
         </article>
         <article>
-            <img class="evento__imgEvento wow animate__animated animate__fadeInUp" src="../assets/images/cata-online.jpg" alt="Flyer de evento no disponible">
+            <img class="evento__imgEvento wow animate__animated animate__fadeInLeft" src="../assets/images/degustacion-octubre.jpg" alt="Flyer de evento no disponible">
         </article>
         <hr>
         <article>
