Correcciones post prueba en mobile

--- a/index.html
+++ b/index.html
@@ -69,11 +69,6 @@
                 <div id="productosDestacados">
                     <table>
                         <tr>
-                            <td class="productosDestacados__nombre">Luigi Bosca Cabernet Sauvignon</td>
-                            <td class="productosDestacados__nombre">Jorge Rubio Gran Reserva Malbec</td>
-                            <td class="productosDestacados__nombre">Jorge Rubio Privado Reserva Malbec</td>
-                        </tr>
-                        <tr>
                             <td>
                                 <img class="productosDestacados__image" src="assets/images/productos/producto1.png" alt="Luigi Bosca Cabernet Sauvignon">
                                 <img class="productosDestacados__stars" src="assets/images/productos/4stars.png" alt="Puntuación no disponible">
@@ -87,7 +82,11 @@
                                 <img class="productosDestacados__stars" src="assets/images/productos/5stars.png" alt="Puntuación no disponible">
                             </td>
                         </tr>
-                        
+                        <tr>
+                            <td class="productosDestacados__nombre">Luigi Bosca Cabernet Sauvignon</td>
+                            <td class="productosDestacados__nombre">Jorge Rubio Gran Reserva Malbec</td>
+                            <td class="productosDestacados__nombre">Jorge Rubio Privado Reserva Malbec</td>
+                        </tr>
                     </table>
                 </div>
             </article>
@@ -99,24 +98,7 @@
                         <th colspan="4"><h3>Próximos eventos</h3></th>
                         <tr class="eventos__row-1">
                             <td class="eventos__fecha">27 AGO</td>
-                            <td class="eventos__descripcion" data-bs-toggle="modal" data-bs-target="#exampleModal">Cena y cata</td>
-                            <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-                                <div class="modal-dialog modal-dialog-center">
-                                  <div class="modal-content">
-                                    <div class="modal-header">
-                                      <h5 class="modal-title" id="staticBackdropLabel">VIOLETA VINOS</h5>
-                                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                    </div>
-                                    <div class="modal-body">
-                                      <img src="/assets/images/cata-online.jpg" alt="Imagen no disponible">
-                                    </div>
-                                    <div class="modal-footer">
-                                      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                      <button type="button" class="btn btn-primary">Understood</button>
-                                    </div>
-                                  </div>
-                                </div>
-                              </div>
+                            <td class="eventos__descripcion">Cena y cata</a></td>
                             <td><a href = "mailto: violetavinos@gmail.com?subject=Reservar%20cupo&body=¡Hola!%20Quiero%20reservar%20un%20cupo%20para%20el%20evento...">¡Reservá tu lugar!</a></td>
                         </tr>
                         <tr class="eventos__row-2">
