agregué simulador js de tienda

--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -25,6 +25,7 @@
                 <div class="header__buttons">
                     <img class="header__item" src="../assets/images/login-logo.png" alt="Login">
                     <img class="header__item" src="../assets/images/carrito-logo.png" alt="Carrito de compras">
+                    <label id="cantItems">0</label>
                 </div>
             </div>
             <nav class="navbar navbar-expand-lg bg-light">
@@ -169,6 +170,8 @@
         </footer>
         <!--cierre de pie de pagina-->
     <!--</div>-->
+    <script src="../js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+    
 </body>
 </html>
