Javascript. Arrays y objetos

--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -24,7 +24,7 @@
                 <h3><a href="../index.html"><img id="header__logo" src="../assets/images/logo/logo-chico.png" alt="Violeta Vinos"></a></h3>
                 <div class="header__buttons">
                     <img class="header__item" src="../assets/images/login-logo.png" alt="Login">
-                    <img class="header__item" src="../assets/images/carrito-logo.png" alt="Carrito de compras">
+                    <a href="compra.html"><img class="header__item" src="../assets/images/carrito-logo.png" alt="Carrito de compras"></a>
                     <label id="cantItems">0</label>
                 </div>
             </div>
@@ -74,6 +74,8 @@
                         <div class="card-body">
                             <label class="card-title">Luigi Bosca Cabernet</label>
                             <p class="card-text">$1000.00</p>
+                            <label for="cantidad">Cantidad:</label>
+                            <input type="number" class="card-cantidad" placeholder="0" min="0">
                             <a href="#" class="btn btn-primary boton-addcart">Comprar</a>
                         </div>
                     </div>
@@ -82,6 +84,9 @@
                         <div class="card-body">
                             <label class="card-title">Jorge Rubio Gran Reserva</label>
                             <p class="card-text">$1500.00</p>
+                            <label for="cantidad">Cantidad:</label>
+                            <input type="number" style="width: 50px; display: inline; margin-bottom: 10px; text-align: center;" placeholder="0" min="0">
+                            
                             <a href="#" class="btn btn-primary boton-addcart">Comprar</a>
                         </div>
                     </div>
@@ -90,6 +95,8 @@
                         <div class="card-body">
                             <label class="card-title">Jorge Rubio Malbec</label>
                             <p class="card-text">$1250.00</p>
+                            <label for="cantidad">Cantidad:</label>
+                            <input type="number" style="width: 50px; display: inline; margin-bottom: 10px; text-align: center;" placeholder="0" min="0">
                             <a href="#" class="btn btn-primary boton-addcart">Comprar</a>
                         </div>
                     </div>
@@ -98,6 +105,8 @@
                         <div class="card-body">
                             <label class="card-title">Vino orgánico Animal</label>
                             <p class="card-text">$1299.00</p>
+                            <label for="cantidad">Cantidad:</label>
+                            <input type="number" style="width: 50px; display: inline; margin-bottom: 10px; text-align: center;" placeholder="0" min="0">
                             <a href="#" class="btn btn-primary boton-addcart">Comprar</a>
                         </div>
                     </div>
@@ -106,6 +115,8 @@
                         <div class="card-body">
                             <label class="card-title">Vino Nucha Orgánico</label>
                             <p class="card-text">$2550.00</p>
+                            <label for="cantidad">Cantidad:</label>
+                            <input type="number" style="width: 50px; display: inline; margin-bottom: 10px; text-align: center;" placeholder="0" min="0">
                             <a href="#" class="btn btn-primary boton-addcart">Comprar</a>
                         </div>
                     </div>
@@ -114,6 +125,8 @@
                         <div class="card-body">
                             <label class="card-title">Susana Balbo Brioso</label>
                             <p class="card-text">$5425.00</p>
+                            <label for="cantidad">Cantidad:</label>
+                            <input type="number" style="width: 50px; display: inline; margin-bottom: 10px; text-align: center;" placeholder="0" min="0">
                             <a href="#" class="btn btn-primary boton-addcart">Comprar</a>
                         </div>
                     </div>                    
@@ -122,6 +135,8 @@
                         <div class="card-body">
                             <label class="card-title">Susana Balbo Signature</label>
                             <p class="card-text">$2700.00</p>
+                            <label for="cantidad">Cantidad:</label>
+                            <input type="number" style="width: 50px; display: inline; margin-bottom: 10px; text-align: center;" placeholder="0" min="0">
                             <a href="#" class="btn btn-primary boton-addcart">Comprar</a>
                         </div>
                     </div>
@@ -130,6 +145,8 @@
                         <div class="card-body">
                             <label class="card-title">Vino 1905 Blend</label>
                             <p class="card-text">$5500.00</p>
+                            <label for="cantidad">Cantidad:</label>
+                            <input type="number" style="width: 50px; display: inline; margin-bottom: 10px; text-align: center;" placeholder="0" min="0">
                             <a href="#" class="btn btn-primary boton-addcart">Comprar</a>
                         </div>
                     </div>
