--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
                 <h3><a href="index.html"><img id="header__logo" src="assets/images/logo/logo-chico.png" alt="Violeta Vinos"></a></h3>
                 <div class="header__buttons">
                     <img class="header__item" src="assets/images/login-logo.png" alt="Login">
-                    <img class="header__item" src="assets/images/carrito-logo.png" alt="Carrito de compras">
+                    <a href="pages/compra.html"><img class="header__item" src="assets/images/carrito-logo.png" alt="Carrito de compras"></a>
+                    <label id="cantItems">0</label>
                 </div>
             </div>
             <nav class="navbar navbar-expand-lg bg-light">
@@ -112,7 +113,7 @@
                                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                         </div>
                                         <div class="modal-body">
-                                            <img class="carrousel__imagen-lg" src="assets/images/degustacion-octubre.jpg" alt="Imagen no disponible">
+                                            <img id="img1" class="carrousel__imagen-lg" src="assets/images/degustacion-octubre.jpg" alt="Imagen no disponible">
                                         </div>
                                     </div>
                                 </div>
@@ -168,6 +169,7 @@
         </footer>
         <!--cierre de pie de pagina-->
     </div>
+    <script src="../js/functions.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
