--- a/pages/club.html
+++ b/pages/club.html
@@ -23,7 +23,8 @@
             <h3><a href="../index.html"><img id="header__logo" src="../assets/images/logo/logo-chico.png" alt="Violeta Vinos"></a></h3>
             <div class="header__buttons">
                 <img class="header__item" src="../assets/images/login-logo.png" alt="Login">
-                <img class="header__item" src="../assets/images/carrito-logo.png" alt="Carrito de compras">
+                <a href="compra.html"><img class="header__item" src="../assets/images/carrito-logo.png" alt="Carrito de compras"></a>
+                <label id="cantItems">0</label>
             </div>
         </div>
         <nav class="navbar navbar-expand-lg bg-light">
@@ -151,6 +152,7 @@
         </div>
     </footer>
     <!--cierre de pie de pagina-->
+    <script src="../js/functions.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
