--- a/pages/club.html
+++ b/pages/club.html
@@ -54,8 +54,8 @@
                         </li>
                     </ul>
                     <form class="d-flex" role="search">
-                        <input class="form-control me-2 texto" type="search" placeholder="Buscar..." aria-label="Search">
-                        <button class="btn btn-outline-success boton-buscar" type="submit">Search</button>
+                        <input id="textoBusqueda" class="form-control me-2 texto" type="search" placeholder="Buscar..." aria-label="Search">
+                        <button id="btnBuscar" class="btn btn-outline-success boton-buscar" type="submit">Search</button>
                     </form>
                 </div>
                 <img class="header__item header__item-mobile" src="../assets/images/carrito-logo.png" alt="Carrito de compras">
