--- a/pages/compra.html
+++ b/pages/compra.html
@@ -67,6 +67,8 @@
         <section>
             <img class="section__banner" src="../assets/images/banners/banner-top.jpg" alt="Imagen no disponible">
             <h3>Resumen de compra</h3>
+            <div id="resumenCompraConfirmada">
+            </div>
             <!--aca va el resumen de la compra-->
             <article>
                 <table id="carrito">
@@ -80,18 +82,31 @@
                 <label id="importeDescuento">Descuento: $0</label>
                 <label id="importeTotal">Total: </label>
             </div>
-            <form action="">
-                <fieldset>
-                    <label for="cuponDescuento">APLICAR CUPÓN DE DESCUENTO</label>
-                    <input type="text" id="cuponDescuento">
-                    <button class="boton-envio" id="validarCupon">Validar</button>
-                    <div>
-                        <span id="validarCupon_invalido">Código inexistente</span>
-                    </div>
-                </fieldset>
-                <input type="submit" name="confirmarCompra" class="boton-envio" value="Finalizar compra">
-                <input type="submit" id="cancelarCompra" class="boton-envio boton-cancelarCompra" value="Vaciar carrito"></button>
-            </form>
+            <div id="formularioPago">
+                <form action="">
+                    <fieldset>
+                        <label for="cuponDescuento">APLICAR CUPÓN DE DESCUENTO</label>
+                        <input type="text" id="cuponDescuento">
+                        <button class="boton-envio" id="validarCupon">Validar</button>
+                        <div>
+                            <span id="validarCupon_invalido">Código inexistente</span>
+                        </div>
+                    </fieldset>
+                    <fieldset>
+                        <label for="metodoPago">SELECCIONE EL MÉTODO DE PAGO: </label>
+                        <select name="metodoPago" id="metodoPago">
+                            <option value="efectivo">EFECTIVO CONTRAENTREGA</option>
+                            <option value="transferencia">TRANSFERENCIA BANCARIA</option>
+                            <option value="mercadopago">MERCADOPAGO</option>
+                        </select>
+                    </fieldset>
+                    <input type="submit" id="finalizarCompra" class="boton-envio" value="Finalizar compra">
+                    <input type="submit" id="cancelarCompra" class="boton-envio boton-cancelarCompra" value="Vaciar carrito"></button>
+                </form>
+            </div>
+        </section>
+        <section id="compraFinalizada">
+            <article><div id="contenidoCompra"></div></article>
         </section>
         <!--pie de pagina-->
         <footer>
@@ -127,6 +142,7 @@
         </footer>
         <!--cierre de pie de pagina-->
     <!--</div>-->
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="../js/compra.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
