--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -8,10 +8,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/animate-wow/animate.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <meta name="keywords" content="vino, comprar, cava, dig wine, añejo, cuerpo, aroma, vino boutique, catador, orgánico, espumante, malbec, cabernet, sauvignon, tinto, blanco, rosado, pinot noir, merlot">
     <meta name="description" content="Tienda de vinos de selección. Vinos boutique exclusivos. Envíos gratis en CABA a partir de $5000.">
     <title>Tienda de vinos boutique y de selección</title>
-    <script src="animate-wow/wow.min.js"></script>
+    <script src="../css/animate-wow/wow.min.js"></script>
     <script>
         new WOW().init()
     </script>
@@ -65,8 +66,10 @@
         </header>
         <!--cierre del menu-->
         <section>
-            <img class="section__banner" src="../assets/images/banners/banner-top.jpg" alt="Imagen no disponible">
             <article>
+                <h3>¡Vino destacado extranjero!</h3>
+                <div id="productoDestacadoExtranjero"></div>
+                <img class="section__banner tienda" src="../assets/images/banners/banner-top.jpg" alt="Imagen no disponible">
                 <h3>Nuestros vinos</h3>
                 <div id="mas-info-overlay">
                     <i id="close-btn" class="fas fa-times">X</i>
@@ -76,88 +79,8 @@
                         </div>
                     </div>
                 </div>
-                <div id="listadoProductos">
-                    <!-- <div  class="card listadoProductos__producto wow animate__animated animate__fadeIn" style="width: 9rem;">
-                        <img src="../assets/images/productos/producto1.png" class="card-img-top" alt="Luigi Bosca Cabernet">
-                        <div class="card-body">
-                            <label class="card-title">Luigi Bosca Cabernet</label>
-                            <p class="card-text">$1000.00</p>
-                            <label for="cantidad">Cantidad:</label>
-                            <input type="number" class="card-cantidad" placeholder="0" min="0">
-                            <a href="#" id="1" class="btn btn-primary boton-addcart">Comprar</a>
-                        </div>
-                    </div>
-                    <div class="card listadoProductos__producto wow animate__animated animate__fadeIn" style="width: 9rem;">
-                        <img src="../assets/images/productos/producto2.png" class="card-img-top" alt="Jorge Rubio Gran Reserva">
-                        <div class="card-body">
-                            <label class="card-title">Jorge Rubio Gran Reserva</label>
-                            <p class="card-text">$1500.00</p>
-                            <label for="cantidad">Cantidad:</label>
-                            <input type="number" class="card-cantidad" placeholder="0" min="0">
-                            <a href="#" id="2" class="btn btn-primary boton-addcart">Comprar</a>
-                        </div>
-                    </div>
-                    <div class="card listadoProductos__producto wow animate__animated animate__fadeIn" style="width: 9rem;">
-                        <img src="../assets/images/productos/producto3.png" class="card-img-top" alt="Jorge Rubio Malbec">
-                        <div class="card-body">
-                            <label class="card-title">Jorge Rubio Malbec</label>
-                            <p class="card-text">$1250.00</p>
-                            <label for="cantidad">Cantidad:</label>
-                            <input type="number" class="card-cantidad" placeholder="0" min="0">
-                            <a href="#" id="3" class="btn btn-primary boton-addcart">Comprar</a>
-                        </div>
-                    </div>
-                    <div class="card listadoProductos__producto wow animate__animated animate__fadeIn" style="width: 9rem;">
-                        <img src="../assets/images/productos/producto4.png" class="card-img-top" alt="Animal orgánico">
-                        <div class="card-body">
-                            <label class="card-title">Vino orgánico Animal</label>
-                            <p class="card-text">$1299.00</p>
-                            <label for="cantidad">Cantidad:</label>
-                            <input type="number" class="card-cantidad" placeholder="0" min="0">
-                            <a href="#" id="4" class="btn btn-primary boton-addcart">Comprar</a>
-                        </div>
-                    </div>
-                    <div class="card listadoProductos__producto wow animate__animated animate__fadeIn" style="width: 9rem;">
-                        <img src="../assets/images/productos/producto5.png" class="card-img-top" alt="Nucha Orgánico">
-                        <div class="card-body">
-                            <label class="card-title">Vino Nucha Orgánico</label>
-                            <p class="card-text">$2550.00</p>
-                            <label for="cantidad">Cantidad:</label>
-                            <input type="number" class="card-cantidad" placeholder="0" min="0">
-                            <a href="#" id="5" class="btn btn-primary boton-addcart">Comprar</a>
-                        </div>
-                    </div>
-                    <div class="card listadoProductos__producto wow animate__animated animate__fadeIn" style="width: 9rem;">
-                        <img src="../assets/images/productos/producto6.png" class="card-img-top" alt="Susana Balbo Brioso">
-                        <div class="card-body">
-                            <label class="card-title">Susana Balbo Brioso</label>
-                            <p class="card-text">$5425.00</p>
-                            <label for="cantidad">Cantidad:</label>
-                            <input type="number" class="card-cantidad" placeholder="0" min="0">
-                            <a href="#" id="6" class="btn btn-primary boton-addcart">Comprar</a>
-                        </div>
-                    </div>                    
-                    <div class="card listadoProductos__producto wow animate__animated animate__fadeIn" style="width: 9rem;">
-                        <img src="../assets/images/productos/producto7.png" class="card-img-top" alt="Susana Balbo Signature">
-                        <div class="card-body">
-                            <label class="card-title">Susana Balbo Signature</label>
-                            <p class="card-text">$2700.00</p>
-                            <label for="cantidad">Cantidad:</label>
-                            <input type="number" class="card-cantidad" placeholder="0" min="0">
-                            <a href="#" id="7" class="btn btn-primary boton-addcart">Comprar</a>
-                        </div>
-                    </div>
-                    <div class="card listadoProductos__producto wow animate__animated animate__fadeIn" style="width: 9rem;">
-                        <img src="../assets/images/productos/producto8.png" class="card-img-top" alt="1905 Blend">
-                        <div class="card-body">
-                            <label class="card-title">Vino 1905 Blend</label>
-                            <p class="card-text">$5500.00</p>
-                            <label for="cantidad">Cantidad:</label>
-                            <input type="number" class="card-cantidad" placeholder="0" min="0">
-                            <a href="#" id="8" class="btn btn-primary boton-addcart">Comprar</a>
-                        </div>
-                    </div> -->
-                </div>
+                <div id="listadoProductos"></div>
+                <div id="ventaProhibida">Prohibida la venta a menores de 18 años.</div>
             </article>
         </section>
         <!--pie de pagina-->
@@ -194,6 +117,8 @@
         </footer>
         <!--cierre de pie de pagina-->
     <!--</div>-->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="../js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     
